Experimenting with db related project layout

--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,18 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
 
 [packages]
 flask = "*"
 pbkdf2 = "*"
 pyjwt = "*"
 cerberus = "*"
+sqlalchemy = "*"
+alembic = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
